--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,28 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <artifactId>plantuml-generator-maven-plugin</artifactId>
+                <groupId>de.elnarion.maven</groupId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <id>generate-simple-diagram</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <phase>generate-test-sources</phase>
+                        <configuration>
+                            <outputFilename>testdiagram1.txt</outputFilename>
+                            <scanPackages>
+                                <scanPackage>
+                                    some.package.to.process
+                                </scanPackage>
+                            </scanPackages>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
 
         <pluginManagement>
