--- a/drivers/adapters/application-business-rules/pom.xml
+++ b/drivers/adapters/application-business-rules/pom.xml
@@ -12,6 +12,14 @@
     </parent>
 
     <artifactId>application-business-rules</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.sap</groupId>
+            <artifactId>enterprise-business-rules</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <!-- To create an "attached test JAR" to be able to use this module's test classes in other modules -->
     <build>
