--- a/drivers/adapters/pom.xml
+++ b/drivers/adapters/pom.xml
@@ -5,21 +5,21 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.sap</groupId>
-        <artifactId>shop-parent</artifactId>
+        <groupId>com.sap.tutor.clean.architecture</groupId>
+        <artifactId>shop</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>adapters</artifactId>
     <dependencies>
         <dependency>
-            <groupId>com.sap</groupId>
+            <groupId>com.sap.tutor.clean.architecture</groupId>
             <artifactId>application-business-rules</artifactId>
             <version>${project.version}</version>
         </dependency>
         <!-- To use the "attached test JAR" from the "model" module -->
         <dependency>
-            <groupId>com.sap</groupId>
+            <groupId>com.sap.tutor.clean.architecture</groupId>
             <artifactId>application-business-rules</artifactId>
             <version>${project.version}</version>
             <classifier>tests</classifier>
