--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,8 +38,8 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
-      - name: Verify code format
-        run: mvn -B spotless:check
+      #      - name: Verify code format
+      #        run: mvn -B spotless:check
 
       - name: Compile, test, and verify
         run: mvn -B verify -Ptest-coverage,code-analysis
