--- a/drivers/adapters/application-business-rules/pom.xml
+++ b/drivers/adapters/application-business-rules/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.sap</groupId>
-        <artifactId>shop-parent</artifactId>
+        <groupId>com.sap.tutor.clean.architecture</groupId>
+        <artifactId>shop</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../../../pom.xml</relativePath>
     </parent>
@@ -14,7 +14,7 @@
     <artifactId>application-business-rules</artifactId>
     <dependencies>
         <dependency>
-            <groupId>com.sap</groupId>
+            <groupId>com.sap.tutor.clean.architecture</groupId>
             <artifactId>enterprise-business-rules</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
