--- a/drivers/pom.xml
+++ b/drivers/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.sap</groupId>
-        <artifactId>shop-parent</artifactId>
+        <groupId>com.sap.tutor.clean.architecture</groupId>
+        <artifactId>shop</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
@@ -13,7 +13,7 @@
     <dependencies>
         <!-- Internal -->
         <dependency>
-            <groupId>com.sap</groupId>
+            <groupId>com.sap.tutor.clean.architecture</groupId>
             <artifactId>adapters</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -72,7 +72,7 @@
 
         <!-- To use the "attached test JAR" from the "model" module -->
         <dependency>
-            <groupId>com.sap</groupId>
+            <groupId>com.sap.tutor.clean.architecture</groupId>
             <artifactId>application-business-rules</artifactId>
             <version>${project.version}</version>
             <classifier>tests</classifier>
