--- a/pom.xml
+++ b/pom.xml
@@ -164,7 +164,7 @@
                     <outputFilename>entity-relationship.plantuml</outputFilename>
                     <outputDirectory>${project.basedir}</outputDirectory>
                     <additionalPlantUmlConfigs>
-                        <additionalPlantUmlConfig>left to right direction</additionalPlantUmlConfig>
+                        <!--                        <additionalPlantUmlConfig>left to right direction</additionalPlantUmlConfig>-->
                         <additionalPlantUmlConfig>skinparam linetype ortho</additionalPlantUmlConfig>
                     </additionalPlantUmlConfigs>
                     <scanPackages>
