--- a/drivers/application-services/domain-services/pom.xml
+++ b/drivers/application-services/domain-services/pom.xml
@@ -11,11 +11,11 @@
         <relativePath>../../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>application-business-rules</artifactId>
+    <artifactId>domain-services</artifactId>
     <dependencies>
         <dependency>
             <groupId>com.potucek.</groupId>
-            <artifactId>enterprise-business-rules</artifactId>
+            <artifactId>entities</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
