--- a/drivers/application-services/pom.xml
+++ b/drivers/application-services/pom.xml
@@ -10,11 +10,11 @@
         <version>1.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-    <artifactId>adapters</artifactId>
+    <artifactId>application-services</artifactId>
     <dependencies>
         <dependency>
             <groupId>com.potucek.</groupId>
-            <artifactId>application-business-rules</artifactId>
+            <artifactId>domain-services</artifactId>
             <version>${project.version}</version>
         </dependency>
         <!-- To use the "attached test JAR" from the "model" module -->
