--- a/drivers/core/application-services/domain-services/entities/pom.xml
+++ b/drivers/core/application-services/domain-services/entities/pom.xml
@@ -8,17 +8,10 @@
         <groupId>com.potucek.</groupId>
         <artifactId>shop</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../../../pom.xml</relativePath>
+        <relativePath>../../../../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>domain-services</artifactId>
-    <dependencies>
-        <dependency>
-            <groupId>com.potucek.</groupId>
-            <artifactId>entities</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+    <artifactId>entities</artifactId>
 
     <!-- To create an "attached test JAR" to be able to use this module's test classes in other modules -->
     <build>
