--- a/drivers/core/application-services/domain-services/entities/pom.xml
+++ b/drivers/core/application-services/domain-services/entities/pom.xml
@@ -12,6 +12,14 @@
     </parent>
 
     <artifactId>entities</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.jmolecules</groupId>
+            <artifactId>jmolecules-ddd</artifactId>
+            <version>1.9.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <!-- To create an "attached test JAR" to be able to use this module's test classes in other modules -->
     <!--    <build>-->
