--- a/drivers/core/application-services/domain-services/entities/pom.xml
+++ b/drivers/core/application-services/domain-services/entities/pom.xml
@@ -16,8 +16,12 @@
         <dependency>
             <groupId>org.jmolecules</groupId>
             <artifactId>jmolecules-ddd</artifactId>
-            <version>1.9.0</version>
-            <scope>compile</scope>
+            <version>2.0.0-RC1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jmolecules.integrations</groupId>
+            <artifactId>jmolecules-starter-ddd</artifactId>
+            <version>0.24.1</version>
         </dependency>
     </dependencies>
 
