--- a/drivers/pom.xml
+++ b/drivers/pom.xml
@@ -27,17 +27,17 @@
         <dependency>
             <groupId>org.jmolecules</groupId>
             <artifactId>jmolecules-ddd</artifactId>
-            <version>1.9.0</version>
+            <version>2.0.0-RC1</version>
         </dependency>
         <dependency>
             <groupId>org.jmolecules.integrations</groupId>
             <artifactId>jmolecules-starter-ddd</artifactId>
-            <version>0.21.0</version>
+            <version>0.24.1</version>
         </dependency>
         <dependency>
             <groupId>org.jmolecules.integrations</groupId>
             <artifactId>jmolecules-starter-test</artifactId>
-            <version>0.21.0</version>
+            <version>0.24.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
