--- a/drivers/core/application-services/domain-services/entities/pom.xml
+++ b/drivers/core/application-services/domain-services/entities/pom.xml
@@ -23,6 +23,18 @@
             <artifactId>jmolecules-starter-ddd</artifactId>
             <version>0.24.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.modulith</groupId>
+            <artifactId>spring-modulith-api</artifactId>
+            <version>1.2.2</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jmolecules</groupId>
+            <artifactId>jmolecules-layered-architecture</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <!-- To create an "attached test JAR" to be able to use this module's test classes in other modules -->
