--- a/drivers/pom.xml
+++ b/drivers/pom.xml
@@ -10,6 +10,17 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>drivers</artifactId>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.modulith</groupId>
+                <artifactId>spring-modulith-bom</artifactId>
+                <version>1.2.2</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <dependencies>
         <dependency>
             <groupId>com.potucek.</groupId>
@@ -33,6 +44,15 @@
             <groupId>org.jmolecules.integrations</groupId>
             <artifactId>jmolecules-starter-ddd</artifactId>
             <version>0.24.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.modulith</groupId>
+            <artifactId>spring-modulith-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.modulith</groupId>
+            <artifactId>spring-modulith-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jmolecules.integrations</groupId>
