--- a/drivers/core/application-services/domain-services/entities/pom.xml
+++ b/drivers/core/application-services/domain-services/entities/pom.xml
@@ -31,6 +31,12 @@
         </dependency>
         <dependency>
             <groupId>org.jmolecules</groupId>
+            <artifactId>jmolecules-hexagonal-architecture</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jmolecules</groupId>
             <artifactId>jmolecules-layered-architecture</artifactId>
             <version>RELEASE</version>
             <scope>compile</scope>
